# rh-sample-autosd-toolchain

./: MODULE.bazel  README.md
.github/workflows/: build-autosd.yml
score/: main.c
