module(name = "score_toolchain")

bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.5.1")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "score_bazel_platforms", version = "0.1.2")

gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc")

gcc.toolchain(
    name = "score_autosd10_x86_64_toolchain",
    runtime_ecosystem = "autosd10",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
)

gcc.toolchain(
    name = "score_autosd10_aarch64_toolchain",
    runtime_ecosystem = "autosd10",
    target_cpu = "aarch64",
    target_os = "linux",
    use_default_package = True,
)

use_repo(
    gcc,
    "score_autosd10_x86_64_toolchain",
    "score_autosd10_aarch64_toolchain"
)
